# CellSeg3D

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  TODO.html  create_2d_unet_dataset.py  dev.requirements.txt  dock.py  genindex.html  index.html  objects.inv  old_requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  run_model.py  search.html  searchindex.js  setup.cfg  submission_env.txt  tox.ini  view_brain.py  welcome.html
.doctrees/: environment.pickle  index.doctree
.doctrees/res/: welcome.doctree
.github/workflows/: build_docs.yml  preview_metadata.yml  test_and_deploy.yml
.napari/: DESCRIPTION.md  config.yml
_sources/: index.rst.txt  welcome.rst
_sources/res/: interface.rst.txt  model_framework.rst.txt  model_workers.rst.txt  plugin_base.rst.txt  plugin_crop.rst.txt  welcome.rst.txt
annotator/: create_3d_unet_dataset.py  create_dataset_of_tif_files.py  crop_brain_patch.py  napari_view_simple.py  utils.py  view_sample.py
cellseg_annotator/: annotator.py  count_cells.py  create_3d_stardist_dataset.py  napari.yaml  plugins.py  train.py
conda/: cellseg3d_m1.yml  napari_CellSeg3D_ARM64.yml  napari_cellseg3d_ARM64.yml  napari_cellseg3d_m1.yml
devtools/conda-envs/: docs_env.yaml
docker/: Dockerfile.cellseg3d
docs/: Makefile  TODO.md  _config.yml  _toc.yml  buildsite.sh  conf.py  ex.rst  index.rst  launch_review.rst  napari_view_simple.rst  plugin_loader.rst  utils.rst  welcome.rst
docs/_templates/: custom-class-template.rst
docs/res/: cropping_module_guide.rst  custom_model_template.rst  dock.rst  inference_module_guide.rst  interface.rst  loader_module_guide.rst  model_framework.rst  model_instance_seg.rst  model_workers.rst  plugin_base.rst  plugin_crop.rst  plugin_dock.rst  plugin_loader.rst  plugin_model_inference.rst  plugin_model_training.rst  plugin_review.rst  review_module_guide.rst  training_module_guide.rst  utils.rst  welcome.rst
example_volumes/: test_very_small.tif
examples/: README.md  c5image.tif
napari_cellseg3d/: __init__.py  config.py  interface.py  interface_utils.py  launch_review.py  log_utility.py  model_framework.py  model_instance_seg.py  model_workers.py  napari.yaml  plugin_base.py  plugin_convert.py  plugin_crop.py  plugin_dock.py  plugin_helper.py  plugin_metrics.py  plugin_model_inference.py  plugin_model_training.py  plugin_review.py  plugin_utilities.py  plugins.py  utils.py
napari_cellseg3d/_tests/: conftest.py  fixtures.py  pytest.ini  test_base_plugin.py  test_dock_widget.py  test_helper.py  test_inference.py  test_interface.py  test_labels_correction.py  test_model_framework.py  test_models.py  test_plugin_inference.py  test_plugin_training.py  test_plugin_utils.py  test_plugins.py  test_review.py  test_supervised_training.py  test_training.py  test_training_plugin.py  test_unsup_training.py  test_utils.py  test_weight_download.py  test_wnet_training.py  test_workers.py
napari_cellseg3d/code_models/: __init__.py  crf.py  instance_segmentation.py  model_framework.py  model_instance_seg.py  model_workers.py  worker_inference.py  worker_training.py  workers.py  workers_utils.py
napari_cellseg3d/code_plugins/: __init__.py  plugin_base.py  plugin_convert.py  plugin_crf.py  plugin_crop.py  plugin_helper.py  plugin_metrics.py  plugin_model_inference.py  plugin_model_training.py  plugin_review.py  plugin_review_dock.py  plugin_utilities.py
napari_cellseg3d/dev_scripts/: Dockerfile.cellseg3d  artefact_labeling.py  classifier_test.ipynb  colab_training.py  convert.py  correct_labels.py  crop_data.py  drafts.py  evaluate_labels.py  extract_extra_channels_labels.py  remote_inference.py  remote_training.py  sliding_window_voronoi.py  test_new_evaluation.ipynb  thread_test.py  view_brain.py  view_sample.py  view_wnet.ipynb  weight_conversion.py  whole_brain_utils.py
napari_cellseg3d/models/: TRAILMAP_MS.py  model_SegResNet.py  model_SwinUNetR.py  model_TRAILMAP.py  model_TRAILMAP_MS.py  model_TRAILMAP_PyTorch.py  model_VNet.py
napari_cellseg3d/scripts/: convert.py  weight_conversion.py
napari_cellseg_annotator/: __init__.py  annotator.py  count_cells.py  create_2d_unet_dataset.py  create_3d_stardist_dataset.py  create_3d_unet_dataset.py  create_cellpose_dataset.py  create_dataset.py  create_dataset_of_tif_files.py  dock.py  drafts.py  folder_to_single_image.py  launch_review.py  loader.py  models.py  napari.yaml  napari_view_simple.py  plugin_helper.py  plugin_loader.py  plugin_predicter.py  plugins.py  predict.py  predicter.py  run_model.py  trailmap_seg_to_cellseg_label.py  train.py  trainer.py  utils.py  view_sample.py
napari_cellseg_annotator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
napari_cellseg_annotator/_tests/: test_loader.py  test_utils.py  test_widget.py
napari_cellseg_annotator/notebooks/: train_and_pred_using_PHILOW.ipynb
notebooks/: Colab_WNet3D_training.ipynb  Colab_inference_demo.ipynb  assess_instance.ipynb  colab_inference_demo.ipynb  colab_wnet_training.ipynb  csv_cell_plot.ipynb  data_plot.csv  data_plot_2.csv  full_plot.ipynb  label_stats_csv_plot.ipynb  labels_plot.ipynb  plots_data.csv  plots_data2.csv  train_wnet.ipynb  view_wnet.ipynb
res/: cropping_module_guide.html  custom_model_template.html  inference_module_guide.html  interface.html  launch_review.html  model_framework.html  model_instance_seg.html  model_workers.html  plugin_base.html  plugin_crop.html  plugin_dock.html  plugin_model_inference.html  plugin_model_training.html  plugin_review.html  review_module_guide.html  training_module_guide.html  utils.html  welcome.html
res/code/: instance_segmentation.html  interface.html  launch_review.html  model_framework.html  model_instance_seg.html  model_workers.html  plugin_base.html  plugin_convert.html  plugin_crop.html  plugin_dock.html  plugin_metrics.html  plugin_model_inference.html  plugin_model_training.html  plugin_review.html  plugin_review_dock.html  utils.html  workers.html
res/guides/: training_wnet.html  (+9 more)
test/: README.md
(+320 files in other folders)
