[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
  "wheel",
]

[project]
name = "napari-cellseg3d"
description = "Plugin for cell segmentation in 3D"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: napari",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Testing",
]
dynamic = [ "version" ]
dependencies = [
  # "tifffile>=2022.2.9",
  #    "imageio-ffmpeg>=0.4.5",
  "imagecodecs>=2023.3.16",
  "itk",
  "matplotlib>=3.4.1",
  "monai[einops,nibabel,tifffile]>=0.9",
  "napari[all]>=0.4.14",
  "numpy",
  # "nibabel",
  #    "pillow",
  "pyclesperanto",
  "pydensecrf2",
  "qtpy",
  # "opencv-python>=4.5.5",
  #    "dask-image>=0.6.0",
  "scikit-image>=0.19.2",
  "torch>=1.11",
  "tqdm",
]
[[project.authors]]
name = "Cyril Achard"
email = "cyril.achard@epfl.ch"
[[project.authors]]
name = "Maxime Vidal"
email = "maxime.vidal@epfl.ch"
[[project.authors]]
name = "Mackenzie Mathis"
email = "mackenzie@post.harvard.edu"
[project.entry-points]
"napari.manifest".napari_cellseg3d = "napari_cellseg3d:napari.yaml"
[project.optional-dependencies]
crf = [
  "pydensecrf2",
]
dev = [
  "pre-commit",
  "ruff",
  "twine",
]
docs = [
  "jupyter-book<2",
]
onnx-cpu = [ "onnx", "onnxruntime" ]
onnx-gpu = [ "onnx", "onnxruntime-gpu" ]
pyqt6 = [
  "napari[pyqt6]",
]
pyside6 = [
  "napari[pyside6]",
]
test = [
  "coverage",
  "onnx",
  "onnxruntime",
  "pytest",
  "pytest-cov",
  "pytest-qt",
  "tox",
  "twine",
]
wandb = [ "wandb" ]
[project.urls]
Documentation = "https://adaptivemotorcontrollab.github.io/cellseg3d-docs/res/welcome.html"
Homepage = "https://github.com/AdaptiveMotorControlLab/CellSeg3D"
Issues = "https://github.com/AdaptiveMotorControlLab/CellSeg3D/issues"

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-data]
"*" = [ "res/*.png", "code_models/models/pretrained/*.json", "*.yaml", "napari.yaml" ]
[tool.setuptools.packages]
find.where = [ "." ]

[tool.setuptools_scm]
version_file = "napari_cellseg3d/_version.py"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "docs/conf.py",
  "napari_cellseg3d/_tests/conftest.py",
  "node_modules",
  "venv",
]
[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "A",
  "B",
  "G",
  "I",
  "PT",
  "PTH",
  "RET",
  "SIM",
  "NPY",
]
# Never enforce `E501` (line length violations) and 'E741' (ambiguous variable names)
# and 'G004' (do not use f-strings in logging)
# and 'A003' (Shadowing python builtins)
# and 'F401' (imported but unused)
# and 'E402' (module level import not at top of file)
ignore = [ "E501", "E741", "G004", "A003", "F401", "E402" ]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyproject-fmt]
max_supported_python = "3.12"
generate_python_version_classifiers = true
# Avoid collapsing tables to field.key = value format (less readable)
table_format = "long"
