[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

# add your package requirements here
# the long list after monai is due to monai optional requirements... Not sure how to know in advance which readers it wil use
install_requires =
    numpy
    napari[all]>=0.4.14
    QtPy
    opencv-python>=4.5.5
    dask-image>=0.6.0
    scikit-image>=0.19.2
    matplotlib>=3.4.1
    tifffile>=2022.2.9
    imageio-ffmpeg>=0.4.5
    torch>=1.11
    monai[nibabel,einops]>=1.0.1
    itk
    tqdm
    nibabel
    pyclesperanto-prototype
    scikit-image
    pillow
    tqdm
    matplotlib
    vispy>=0.9.6

[options.packages.find]
where = .

[options.entry_points]
napari.manifest =
    napari-cellseg3d = napari_cellseg3d:napari.yaml
