;[metadata]
;name = napari-cellseg3d
;version = 0.0.2rc6
;author = Cyril Achard, Maxime Vidal, Jessy Lauer, Mackenzie Mathis
;author_email = cyril.achard@epfl.ch, maxime.vidal@epfl.ch, mackenzie@post.harvard.edu
;
;license = MIT
;description = plugin for cell segmentation
;long_description = file: README.md
;long_description_content_type = text/markdown
;classifiers =
;    Development Status :: 2 - Pre-Alpha
;    Intended Audience :: Science/Research
;    Framework :: napari
;    Topic :: Software Development :: Testing
;    Programming Language :: Python
;    Programming Language :: Python :: 3
;    Programming Language :: Python :: 3.8
;    Programming Language :: Python :: 3.9
;    Programming Language :: Python :: 3.10
;    Operating System :: OS Independent
;    License :: OSI Approved :: MIT License
;    Topic :: Scientific/Engineering :: Artificial Intelligence
;    Topic :: Scientific/Engineering :: Image Processing
;    Topic :: Scientific/Engineering :: Visualization
;
;url = https://github.com/AdaptiveMotorControlLab/CellSeg3d
;project_urls =
;    Bug Tracker = https://github.com/AdaptiveMotorControlLab/CellSeg3d/issues
;    Documentation = https://adaptivemotorcontrollab.github.io/cellseg3d-docs/res/welcome.html
;    Source Code = https://github.com/AdaptiveMotorControlLab/CellSeg3d

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

# add your package requirements here
# the long list after monai is due to monai optional requirements... Not sure how to know in advance which readers it wil use
;install_requires =
;    numpy
;    napari[all]>=0.4.14
;    QtPy
;    opencv-python>=4.5.5
;    dask-image>=0.6.0
;    scikit-image>=0.19.2
;    matplotlib>=3.4.1
;    tifffile>=2022.2.9
;    imageio-ffmpeg>=0.4.5
;    torch>=1.11
;    monai[nibabel,einops]>=0.9.0
;    itk
;    tqdm
;    nibabel
;    scikit-image
;    pillow
;    tqdm
;    matplotlib
;    vispy>=0.9.6

[options.packages.find]
where = .

;[options.package_data]
;napari-cellseg3d =
;  res/*.png
;  code_models/models/pretrained/*.json
;  napari.yaml

[options.entry_points]
napari.manifest =
    napari-cellseg3d = napari_cellseg3d:napari.yaml
