[metadata]
name = napari_cellseg3d
version = 0.2.0

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =.

# add your package requirements here
install_requires =
    numpy
    napari[all]>=0.4.14
    QtPy
    opencv-python>=4.5.5
    scikit-image>=0.19.2
    matplotlib>=3.4.1
    tifffile>=2022.2.9
    imageio-ffmpeg>=0.4.5
    torch>=1.11
    monai[nibabel,einops,tifffile]>=1.0.1
    itk
    tqdm
    nibabel
    pyclesperanto-prototype
    scikit-image
    pillow
    tqdm
    matplotlib
    vispy>=0.9.6

[options.packages.find]
where = .

[options.package_data]
napari_cellseg3d =
  res/*.png
  code_models/models/pretrained/*.json
  napari.yaml

[options.entry_points]
napari.manifest =
    napari_cellseg3d = napari_cellseg3d:napari.yaml
